kube-addons/ingress/countries-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: countries
  namespace: lunatech
spec:
  rules:
  - host: lunatech.countries.hariprasad-karthigasu.info
    http:
      paths:
      - path: /
        backend:
          serviceName: countries
          servicePort: 8080
